--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <strong>Religion:</strong> Roman Catholic</p>
     </div>
     <div class="col-md-4 text-center">
-      <img src="img/profile.jpg" alt="Profile Photo" class="profile-pic img-thumbnail">
+      <img src="profile.jpg" alt="Profile Photo" class="profile-pic img-thumbnail">
     </div>
   </div>
 
